--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
+    "@electron/packager": "^18.3.6",
     "@eslint/js": "^9.14.0",
     "@intlify/unplugin-vue-i18n": "^4.0.0",
     "@quasar/app-vite": "^2.1.0",
     "autoprefixer": "^10.4.2",
+    "electron": "^35.1.3",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "globals": "^15.12.0",
