--- a/src-capacitor/package.json
+++ b/src-capacitor/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vestodollar",
-  "version": "0.0.1",
+  "name": "DivisaXpress",
+  "version": "4.0.0",
   "description": "Easier way to count your Bs",
   "author": "RylovNigami <mendezr1700@gmail.com>",
   "private": true,
