--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@electron/packager": "^18.3.6",
     "@eslint/js": "^9.14.0",
     "@intlify/unplugin-vue-i18n": "^4.0.0",
