--- a/src-capacitor/package.json
+++ b/src-capacitor/package.json
@@ -9,5 +9,8 @@
     "@capacitor/app": "^6.0.0",
     "@capacitor/cli": "^6.0.0",
     "@capacitor/core": "^6.0.0"
+  },
+  "devDependencies": {
+    "@capacitor/assets": "^3.0.5"
   }
 }
