reemplazo de API, actualizacion de precios, y desincorporacion de modulo de otras divisas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
     "javascriptreact",
     "typescript",
     "vue"
-  ]
+  ],
+  "java.configuration.updateBuildConfiguration": "interactive"
 }
