--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "eslint-plugin-vue": "^9.30.0",
     "globals": "^15.12.0",
     "postcss": "^8.4.14",
-    "vite-plugin-checker": "^0.9.0"
+    "vite-plugin-checker": "^0.9.0",
+    "vite-plugin-node-polyfills": "^0.24.0"
   },
   "engines": {
     "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
