--- a/src-capacitor/capacitor.config.json
+++ b/src-capacitor/capacitor.config.json
@@ -1,5 +1,11 @@
 {
   "appId": "org.capacitor.quasar.app",
   "appName": "DivisaXpress",
-  "webDir": "www"
+  "webDir": "www",
+  "bundledWebRuntime": true,
+  "ios": {
+    "splashScreen": {
+      "enabled": false
+    }
+  }
 }
