--- a/src-capacitor/capacitor.config.json
+++ b/src-capacitor/capacitor.config.json
@@ -1,7 +1,7 @@
 {
   "appId": "org.capacitor.quasar.app",
   "appName": "DivisaXpress",
-  "webDir": "www",
+  "webDir": "dist/spa",
   "bundledWebRuntime": true,
   "server": {
     "androidScheme": "https",
