Css, cordova configs, and meta tags on index.html

--- a/src-capacitor/capacitor.config.json
+++ b/src-capacitor/capacitor.config.json
@@ -1,7 +1,7 @@
 {
   "appId": "org.capacitor.quasar.app",
   "appName": "DivisaXpress",
-  "webDir": "dist/spa",
+  "webDir": "dist",
   "bundledWebRuntime": true,
   "server": {
     "androidScheme": "https",
@@ -9,6 +9,6 @@
   },
   "ios": {
     "scheme": "App",
-    "contentInset": "always"
+    "contentInset": "automatic"
   }
 }
