--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "DivisaXpress",
-  "version": "0.0.1",
+  "version": "8.0.0",
   "description": "Easier way to count your Bs",
   "productName": "DivisaXpress",
   "author": "RylovNigami <mendezr1700@gmail.com>",
@@ -11,6 +11,7 @@
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
     "build": "quasar build",
+    "deploy": "vercel",
     "postinstall": "quasar prepare"
   },
   "dependencies": {
