--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.2.1",
     "date-fns": "^4.1.0",
     "kotlin": "^1.9.25",
+    "next": "^15.3.7",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.0"
