--- a/package.json
+++ b/package.json
@@ -26,17 +26,17 @@
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5",
-    "@electron/packager": "^18.3.6",
+    "@electron/packager": "19.0.1",
     "@eslint/js": "^9.14.0",
-    "@intlify/unplugin-vue-i18n": "^4.0.0",
+    "@intlify/unplugin-vue-i18n": "11.0.1",
     "@quasar/app-vite": "^2.1.0",
     "autoprefixer": "^10.4.2",
-    "electron": "^35.1.3",
+    "electron": "39.2.6",
     "eslint": "^9.14.0",
-    "eslint-plugin-vue": "^9.30.0",
-    "globals": "^15.12.0",
+    "eslint-plugin-vue": "10.6.2",
+    "globals": "16.5.0",
     "postcss": "^8.4.14",
-    "vite-plugin-checker": "^0.9.0"
+    "vite-plugin-checker": "0.12.0"
   },
   "engines": {
     "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
