--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "DivisaXpress",
-  "version": "8.0.0",
+  "version": "9.0.2-mobile",
   "description": "Easier way to count your Bs",
   "productName": "DivisaXpress",
   "author": "RylovNigami <mendezr1700@gmail.com>",
@@ -15,30 +15,34 @@
     "postinstall": "quasar prepare"
   },
   "dependencies": {
-    "@quasar/extras": "^1.16.4",
-    "axios": "^1.2.1",
+    "@capacitor/android": "^8.0.1",
+    "@capacitor/app": "^8.0.0",
+    "@capacitor/cli": "^8.0.1",
+    "@capacitor/core": "^8.0.1",
+    "@capacitor/ios": "^8.0.1",
+    "@quasar/extras": "^1.17.0",
+    "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "kotlin": "^1.9.25",
-    "pinia": "^3.0.1",
-    "quasar": "^2.16.0",
-    "vue": "^3.4.18",
-    "vue-i18n": "^11.0.0",
-    "vue-router": "^4.0.0"
+    "pinia": "^3.0.4",
+    "quasar": "^2.18.6",
+    "vue": "^3.5.27",
+    "vue-i18n": "^11.2.8",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5",
     "@electron/packager": "19.0.1",
-    "@eslint/js": "^9.14.0",
-    "@intlify/unplugin-vue-i18n": "11.0.1",
-    "@quasar/app-vite": "^2.1.0",
-    "autoprefixer": "^10.4.2",
-    "electron": "39.2.6",
-    "eslint": "^9.14.0",
-    "eslint-plugin-vue": "10.6.2",
-    "globals": "16.5.0",
-    "postcss": "^8.4.14",
+    "@eslint/js": "^9.39.2",
+    "@intlify/unplugin-vue-i18n": "11.0.3",
+    "@quasar/app-vite": "^2.4.0",
+    "autoprefixer": "^10.4.23",
+    "eslint": "^9.39.2",
+    "eslint-plugin-vue": "10.7.0",
+    "globals": "17.0.0",
+    "postcss": "^8.5.6",
     "vite-plugin-checker": "0.12.0",
-    "vite-plugin-node-polyfills": "^0.24.0"
+    "vite-plugin-node-polyfills": "^0.25.0"
   },
   "engines": {
     "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
