--- a/src-capacitor/package.json
+++ b/src-capacitor/package.json
@@ -1,14 +1,14 @@
 {
   "name": "DivisaXpress",
-  "version": "8.0.0",
+  "version": "9.0.2-mobile",
   "description": "Easier way to count your Bs",
   "author": "RylovNigami <mendezr1700@gmail.com>",
   "private": true,
   "dependencies": {
-    "@capacitor/android": "^6.2.1",
-    "@capacitor/app": "^6.0.0",
-    "@capacitor/cli": "^6.0.0",
-    "@capacitor/core": "^6.0.0"
+    "@capacitor/android": "^8.0.1",
+    "@capacitor/app": "^8.0.0",
+    "@capacitor/cli": "^8.0.1",
+    "@capacitor/core": "^8.0.1"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5"
