--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@intlify/unplugin-vue-i18n": "11.0.3",
     "@quasar/app-vite": "^2.4.0",
     "autoprefixer": "^10.4.23",
-    "electron": "^40.0.0",
+    "dotenv": "^17.2.3",
+    "electron": "^40.1.0",
     "eslint": "^9.39.2",
     "eslint-plugin-vue": "10.7.0",
     "globals": "17.0.0",
