--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "DivisaXpress",
-  "version": "8.0.0",
+  "version": "9.0.1-desktop",
   "description": "Easier way to count your Bs",
   "productName": "DivisaXpress",
   "author": "RylovNigami <mendezr1700@gmail.com>",
@@ -11,29 +11,32 @@
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
     "build": "quasar build",
-    "deploy": "vercel",
     "postinstall": "quasar prepare"
   },
   "dependencies": {
-    "@quasar/extras": "^1.16.4",
-    "axios": "^1.2.1",
+    "@quasar/extras": "^1.17.0",
+    "axios": "^1.13.2",
     "date-fns": "^4.1.0",
+    "electron-packager": "^17.1.2",
     "kotlin": "^1.9.25",
-    "next": "^15.5.9",
-    "quasar": "^2.16.0",
-    "vue": "^3.4.18",
-    "vue-router": "^4.0.0"
+    "pinia": "^3.0.4",
+    "quasar": "^2.18.6",
+    "vue": "^3.5.27",
+    "vue-i18n": "^11.2.8",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
-    "@quasar/app-vite": "^2.1.0",
-    "autoprefixer": "^10.4.2",
-    "eslint": "^9.14.0",
-    "eslint-plugin-vue": "^9.30.0",
-    "globals": "^15.12.0",
-    "postcss": "^8.4.14",
-    "vite-plugin-checker": "^0.9.0",
-    "vite-plugin-node-polyfills": "^0.24.0"
+    "@electron/packager": "^18.4.4",
+    "@eslint/js": "^9.39.2",
+    "@intlify/unplugin-vue-i18n": "11.0.3",
+    "@quasar/app-vite": "^2.4.0",
+    "autoprefixer": "^10.4.23",
+    "dotenv": "^17.2.3",
+    "eslint": "^9.39.2",
+    "eslint-plugin-vue": "10.7.0",
+    "globals": "17.0.0",
+    "postcss": "^8.5.6",
+    "vite-plugin-checker": "0.12.0"
   },
   "engines": {
     "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
