--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "DivisaXpress",
-  "version": "9.0.1-desktop",
+  "version": "9.2.1-vercel",
   "description": "Easier way to count your Bs",
   "productName": "DivisaXpress",
   "author": "RylovNigami <mendezr1700@gmail.com>",
